--- a/gatsby-labs-journal/package.json
+++ b/gatsby-labs-journal/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "gatsby": "^2.4.6",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-catch-links": "^2.0.15",
     "gatsby-plugin-feed": "^2.2.0",
     "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-manifest": "^2.1.1",
